# PICameraInfoWeb

./: LICENSE  README  README.md  cam.py  deploy.sh  main.py  pi.tgz  pyproject.toml  requirements.txt
.github/workflow/: code_quality.yml
.github/workflows/: qodana_code_quality.yml
PICameraInfoWeb/src/: main.py
PICameraInfoWeb/src/logs/: __init__.py  loggers.py
PICameraInfoWeb/src/picam/: __init__.py  caminfo.py  dummy.py  exists.py  real.py
PICameraInfoWeb/src/store/: file.py  output.py
actions/: __init__.py  base.py  cameras.py  power.py  server.py  sql.py
battery/: __init__.py  waveshare.py
battery/i2c/: __init__.py  i2cdevice.py
battery/ina219/: ina219device.py  settings.py
camera/: info.py
data/: __init__.py  datastore.py  info.py  mysql.py
picam/: __init__.py  cam.py
src/: api.yaml  main.py
src/actions/: __init__.py  cameras.py  cli.py  server.py
src/actions/wsgi/: app.py  dataTypes.py  environment.py  responses.py
src/data/: datastore.py  info.py  mysql.py
src/picam/: __init__.py  cam.py  caminfo.py  dummy.py  real.py
src/tools/: __init__.py
src/tools/actions/: __init__.py  base.py  cameras.py  power.py  server.py
src/tools/battery/: __init__.py  waveshare.py
src/tools/battery/i2c/: i2cdevice.py
src/tools/battery/ina219/: __init__.py  ina219device.py  registers.py  (+1 more)
src/tools/data/: __init__.py  mysql.py
src/tools/picam/: cam.py
src/tools/util/: logs.py
src/tools/wsgi/: app.py
src/util/: __init__.py  config.py  errors.py  logs.py
src/wsgi/: app.py
util/: __init__.py  logs.py
wsgi/: __init__.py  app.py
